Demo 1/pod-ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ejemplo-ubuntu
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["/bin/sleep", "3650d"]
