Demo 1/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ejemplo-nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
      - containerPort: 80
        protocol: TCP
