Demo 1/ingress-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-prueba
spec:
  rules:
  - host: testdepruebaprobando.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
